# resordan

./: .gitignore  .gitlab-ci.yml  DEVELOP.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
docs/: index.md
docs/examples/: index.md
docs/source/: api.rst  conf.py  index.rst
scripts/: generate_api_docs.py
src/resordan/clustering/: README.md  algorithm.py  main.py  plotting.py
src/resordan/correlator/: README.md  beam_correlator.py  beam_rcs_estimator.py  beam_rcs_predict.py  beampark_correlator.py  beampark_rcs_predict.py  discos_cat.py  get_discos_cat.py  main.py  save_cluster_data.py  space_track_download.py  update_tle.py
src/resordan/data/: base.py  events.py  gmf.py
src/resordan/scrax/: DielectricMaterial.py  README.txt  bessel.py  evaluate_regression_real_data.py  evaluate_regression_starlink_data.py  features.py  getCircularPlateRCS.py  getClosedCylinderRCS.py  getSimplifiedOpenCylinderRCS.py  get_circular_plate_rcs.py  get_closed_cylinder_rcs.py  get_dielectric_sphere_field_under_plane_wave.py  get_n_max.py  get_open_cylinder_rcs.py  get_pec_sphere_field_under_plane_wave.py  get_rcs.py  get_simplified_open_cylinder_rcs.py  get_sphere_rcs.py  get_square_plate_rcs.py  get_wire_rcs.py  main.py  random.py  rcs_sample.py  rcs_sim.py  read_eiscat_data.py  read_eiscat_rcs_data.py  ref_system.py  refsystem.py  sampling.py  scrax.py  space_debris.py  train_size_regression.py  tumbling.py
src/resordan/scrax/models/: size_predict_n100.pickle  size_predict_n1000.pickle
src/resordan/scrax/tests/: test_scrax_cylinder_regression.py  test_scrax_regression.py
src/resordan/snr2rcs/: main.py  snr2rcs.py
tests/: test_discos.py  test_package.py  test_rcs_estimator.py  test_scrax_rcs.py  test_scrax_statistics.py
tests/data/: size_predict_n10.pickle  size_predict_n100.pickle  size_predict_n1000.pickle
tests/data/rcs_test_0827/24772/eiscat_uhf_20211123_134918_400000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0827/24772/eiscat_uhf_20211123_134928_600000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/15055/eiscat_uhf_20211123_104403_800000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/15055/eiscat_uhf_20211123_104407_000000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/22039/eiscat_uhf_20211123_110414_000000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/22039/eiscat_uhf_20211123_110417_600000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/23087/eiscat_uhf_20211123_124703_600000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/23087/eiscat_uhf_20220408_085713_800000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/23191/eiscat_uhf_20221116_142323_600000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/23191/eiscat_uhf_20221116_160322_600000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/24772/eiscat_uhf_20211123_134921_200000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/25561/eiscat_uhf_20211123_123117_000000/: correlated_snr_prediction.pickle
tests/data/rcs_test_0828/25561/eiscat_uhf_20211123_141009_000000/: correlated_snr_prediction.pickle
(+41 files in other folders)
