[metadata]
name = resordan
description = REsident Space Object RAdar Data ANalysis
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = MIT
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/resordan
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    numpy >= 1.18.4
    h5py >= 3.11.0
    astropy
    spacetrack
    similaritymeasures
    pyant >= 0.12
    pyorb
    mpmath
    scikit-learn

[options.packages.find]
where=src


[options.extras_require]
develop =
    pytest
    flake8
    wheel
    build
    twine
    pytest-cov
    matplotlib
    ipykernel
    radon
    numpydoc
    pre-commit
    black
    mkdocs-material
    mkdocstrings[python]
    mkdocs-jupyter
    mkdocs-gen-files
    mkdocs-literate-nav
    mkdocs-section-index
    mkdocs-print-site-plugin

[options.entry_points]
console_scripts = 
    rcluster = resordan.clustering.main:main
    rcorrelate = resordan.correlator.beam_correlator:main
    rpredict = resordan.correlator.beam_rcs_predict:main
    scrax = resordan.scrax.main:main
    snr2rcs = resordan.snr2rcs.main:main

[flake8]
ignore = D203,E251,E126,E226,W291
max-line-length = 100
exclude = src/resordan/__pycache__,src/resordan/__init__.py

[radon]
exclude = test_*.py
cc_min = B
